test/stg/error/funName2.stg
-- Duplicate identifiers in let block
-- syntax migrated by hand
f1 = FUN(b -> case b of sc{
      	       False -> true;
	       List a -> true;
	       True -> false;
	       x -> let {a = THUNK(b);
	       	    	 a = THUNK(b)} in a});
